# QhenkiX

./: .gitignore  CMakeLists.txt  Directory.Build.props  LICENSE  QhenkiX.vcxproj  QhenkiX.vcxproj.filters  README.md  application.cpp  application.h  d3d11context.cpp  d3d11context.h  debug.cap  displaywindow.cpp  displaywindow.h  shader.cpp  shader.h
.github/workflows/: build.yml
Examples/: README.md
Examples/ImGUI/: ImGUI.vcxproj  ImGUI.vcxproj.filters  imgui.ini  imgui_exampleapp.cpp  imgui_exampleapp.h  main.cpp
Examples/ImGuiExample/: CMakeLists.txt  ImGuiExample.vcxproj  ImGuiExample.vcxproj.filters  README.md  imgui_exampleapp.cpp  imgui_exampleapp.h  main.cpp
Examples/ImGuiExample/base-shaders/: BaseShader.hlsl
Examples/SimpleExample/: CMakeLists.txt  README.md  SimpleExample.vcxproj  SimpleExample.vcxproj.filters  exampleapp.cpp  exampleapp.h  main.cpp
Examples/SimpleExample/base-shaders/: BaseShader.hlsl
Examples/gltfViewer/: CMakeLists.txt  README.md  gltfViewer.vcxproj  gltfViewer.vcxproj.filters  gltf_loader.cpp  gltf_loader.h  gltf_model.h  gltf_viewerapp.cpp  gltf_viewerapp.h  main.cpp
Examples/gltfViewer/base-shaders/: BaseShader.hlsl
Media/: references.md
QhenkiX/: CMakeLists.txt  QhenkiX.vcxproj  QhenkiX.vcxproj.filters
QhenkiX/DirectXTex/lib/: DirectXTex.lib
QhenkiX/DirectXTex/lib/x64/Release/: DirectXTex.lib
QhenkiX/example/: exampleapp.cpp
QhenkiX/include/qhenkiX/: application.h  arcball_controller.h  camera.h  display_window.h  orthographic_camera.h  perspective_camera.h
QhenkiX/include/qhenkiX/RHI/: barrier.h  buffer.h  context.h  descriptor_heap.h  descriptor_table.h  enums.h  sampler.h  shader_compiler.h  subresource.h  sync.h  texture.h
QhenkiX/include/qhenkiX/helper/: d3d_helper.h  file_helper.h  general_helper.h  math_helper.h  string_helper.h
QhenkiX/include/qhenkiX/math/: basis.h  transform.h
QhenkiX/include/qhenkiX/utility/: include_handlers.h  stack_allocator.h
QhenkiX/qhenkiX/: application.cpp  application.h
QhenkiX/qhenkiX/graphics/: arcball_camera_controller.cpp  arcball_camera_controller.h  arcball_controller.cpp  arcball_controller.h  camera.cpp  camera.h  display_window.cpp  display_window.h  displaywindow.cpp  displaywindow.h  mesh.cpp  mesh.h  orthographic_camera.cpp  orthographic_camera.h  perspective_camera.cpp  perspective_camera.h
QhenkiX/qhenkiX/graphics/2d/: spritebatch.cpp  spritebatch.h
QhenkiX/qhenkiX/graphics/d3d11/: d3d11_context.cpp  d3d11_context.h  d3d11_heap.h  d3d11_layout_assembler.cpp  d3d11_layout_assembler.h  d3d11_pipeline.cpp  d3d11_pipeline.h  d3d11_shader.cpp  d3d11_shader.h  d3d11_shader_compiler.cpp  d3d11_shader_compiler.h  d3d11_swapchain.cpp  d3d11_swapchain.h  d3d11_texture.h
QhenkiX/qhenkiX/graphics/d3d12/: d3d12_context.cpp  d3d12_context.h  d3d12_descriptor_heap.cpp  d3d12_descriptor_heap.h  d3d12_fence.h  d3d12_heap.cpp  d3d12_heap.h  d3d12_pipeline.h  d3d12_root_hasher.cpp  d3d12_root_hasher.h  d3d12_shader_compiler.cpp  d3d12_shader_compiler.h  d3d12_texture.h
QhenkiX/qhenkiX/graphics/d3d_shared/: d3d_macros.h
QhenkiX/qhenkiX/graphics/helper/: d3d_helper.cpp  file_helper.cpp  math_helper.cpp
QhenkiX/qhenkiX/graphics/qhenki/: barrier.h  buffer.h  command_list.h  command_pool.h  context.h  descriptor_heap.h  descriptor_table.h  disposable.h  enums.h  fence.h  pipeline.h  queue.h  render_target.h  sampler.h  shader.h  shader_compiler.h  submission.h  swapchain.h  texture.h
QhenkiX/qhenkiX/graphics/shared/: d3d_helper.cpp  d3d_helper.h  d3d_macros.h  file_helper.cpp  filehelper.cpp  filehelper.h  math_helper.cpp  math_helper.h
QhenkiX/qhenkiX/helper/: d3d_helper.cpp  file_helper.cpp
QhenkiX/qhenkiX/input/: input_manager.cpp  input_manager.h
QhenkiX/qhenkiX/math/: basis.cpp  basis.h  transform.cpp  transform.h
QhenkiX/qhenkiX/util/: scaling.h
QhenkiX/qhenkiX/util/viewport/: fit_viewport.h  scaling_viewport.cpp  scaling_viewport.h  viewport.cpp  viewport.h
QhenkiX/qhenkiX/utility/: include_handlers.cpp  stack_allocator.cpp
SXC/: CMakeLists.txt  README.md  SXC.vcxproj  SXC.vcxproj.filters  compiler_job.cpp  compiler_job.h  main.cpp
SXC/include/argparse/: argparse.hpp
SXC/lib/vc_mt/: tbb_debug.lib  tbbbind_2_0_debug.lib  tbbbind_2_5_debug.lib  tbbbind_debug.lib  tbbmalloc_debug.lib  tbbmalloc_proxy_debug.lib
SimpleExample/: SimpleExample.vcxproj  SimpleExample.vcxproj.filters  exampleapp.cpp  exampleapp.h  main.cpp
SimpleExample/base-shaders/: BaseShader.hlsl  BaseShader.vs.hlsl
base-shaders/: BaseShader.ps.hlsl  BaseShader.vs.hlsl
example/: exampleapp.cpp  exampleapp.h  main.cpp
graphics/: d3d11context.cpp  d3d11context.h  displaywindow.cpp  displaywindow.h  layoutassembler.cpp  shader.h
qhenkiX/: application.cpp  application.h
qhenkiX/graphics/: camera.cpp  camera.h  displaywindow.cpp  displaywindow.h  mesh.cpp  mesh.h  shader.cpp  viewport.cpp  viewport.h
qhenkiX/graphics/2d/: spritebatch.cpp  spritebatch.h
qhenkiX/graphics/abstraction/: context.h  swapchain.h
qhenkiX/graphics/d3d/: d3d11_context.cpp  d3d11_shader.cpp  d3d11context.cpp  d3d11context.h
qhenkiX/graphics/d3d11/: d3d11_context.cpp  d3d11_context.h  d3d11_layout_assembler.cpp  d3d11_layout_assembler.h  d3d11_pipeline.cpp  d3d11_pipeline.h  d3d11_render_target.h  d3d11_shader.cpp  d3d11_shader.h  d3d11_swapchain.cpp  d3d11_swapchain.h  layoutassembler.cpp  layoutassembler.h
qhenkiX/graphics/d3d12/: d3d12_context.cpp  d3d12_context.h  d3d12_heap.cpp  d3d12_heap.h
qhenkiX/graphics/qhenki/: buffer.h  command_list.h  context.h  pipeline.h  queue.h  swapchain.h
qhenkiX/graphics/resource/: buffer.h
qhenkiX/graphics/vendetta/: buffer.h  command_list.h  context.h  pipeline.h  render_target.h  shader.h  swapchain.h
qhenkiX/util/viewport/: viewport.cpp  viewport.h
