cmake_minimum_required(VERSION 3.18)
project(SXC LANGUAGES CXX)

set(SXC_SOURCES
    "${CMAKE_CURRENT_SOURCE_DIR}/main.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/compiler_job.cpp"
)

set(SXC_HEADERS
    "${CMAKE_CURRENT_SOURCE_DIR}/compiler_job.h"
)

add_executable(SXC ${SXC_SOURCES} ${SXC_HEADERS})

target_compile_features(SXC PRIVATE cxx_std_20)

if(MSVC)
    target_compile_options(SXC PRIVATE /MP)
endif()

target_include_directories(SXC PRIVATE
    "${CMAKE_CURRENT_SOURCE_DIR}/include"
    "${REPO_ROOT}/QhenkiX/include"
    "${REPO_ROOT}/QhenkiX/qhenkiX"
)

target_link_libraries(SXC PRIVATE QhenkiX)

target_link_directories(SXC PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/lib")
target_link_libraries(SXC PRIVATE tbb12.lib)
